<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

        <EditText
            android:id="@+id/et_batasan_estimasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/masukan_batasan_estimasi"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toEndOf="@+id/linechart"
            app:layout_constraintTop_toBottomOf="@+id/cl_title" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="20-12-2022"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@tools:sample/date/ddmmyy" />


                <LinearLayout
                    android:id="@+id/ll_gandar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_date"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:id="@+id/tv_title_variant"
                        android:layout_width="match_parent"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Jenis Kendaraan" />

                    <TextView
                        android:id="@+id/tv_gandar2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trukgandar2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_title_variant" />

                    <TextView
                        android:id="@+id/tv_gandar3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/truk_gandar_3"
                        />

                    <TextView
                        android:id="@+id/tv_gandar4"
                        android:text="@string/truk_gandar_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:id="@+id/tv_Bis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bis"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_gandar2" />


                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/linechart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="110dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_title" >


            </com.github.mikephil.charting.charts.LineChart>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_bottom_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/linechart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_max_estimation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Max estimation"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_current_estimation"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_minEstimation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Min Estimation "
                    app:layout_constraintEnd_toStartOf="@+id/tv_current_estimation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_current_estimation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Current Estimation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="230002"
                    android:gravity="center_vertical"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_minEstimation" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:text="2300001"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_current_estimation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/tv_max_estimation"
                    android:text="250000" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
